force-app/main/default/objects/LearningPlanEnrollment__c.object
<CustomObject>
    <fields>
        <fullName>Completed_Courses__c</fullName>
        <label>Completed Courses</label>
        <summaryFilterItems>
            <field>LearningPlanCourseEnrollment__c.Completed__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>LearningPlanCourseEnrollment__c.LearningPlanEnrollment__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LPEnrollmentIdExId__c</fullName>
        <externalId>true</externalId>
        <label>LPEnrollmentIdExId</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LearningPlan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LearningPlan</label>
        <referenceTo>Learning_plan__c</referenceTo>
        <relationshipLabel>LearningPlanEnrollments</relationshipLabel>
        <relationshipName>LearningPlanEnrollments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_courses__c</fullName>
        <label>Number of courses</label>
        <summaryForeignKey>LearningPlanCourseEnrollment__c.LearningPlanEnrollment__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Percentage_of_completion__c</fullName>
        <formula>( Completed_Courses__c  /  Number_of_courses__c )  *  100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percentage of completion</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <label>Student</label>
        <referenceTo>Student__c</referenceTo>
        <relationshipLabel>LearningPlanEnrollments</relationshipLabel>
        <relationshipName>LearningPlanEnrollments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>enrollmentDate__c</fullName>
        <label>enrollmentDate</label>
        <type>Date</type>
    </fields>
    <label>LearningPlanEnrollment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>New_Learning_Plan_Enrollment_view</fullName>
        <columns>NAME</columns>
        <columns>Completed_Courses__c</columns>
        <columns>enrollmentDate__c</columns>
        <columns>Student__c</columns>
        <columns>Percentage_of_completion__c</columns>
        <columns>Number_of_courses__c</columns>
        <columns>LearningPlan__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <label>New Learning Plan Enrollment view</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>LearningPlanEnrollment Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LearningPlanEnrollments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>